src/test/ui/generics/param-in-ct-in-ty-param-default.stderr
error: generic parameters may not be used in const operations
  --> $DIR/param-in-ct-in-ty-param-default.rs:1:44
   |
LL | struct Foo<T, U = [u8; std::mem::size_of::<T>()]>(T, U);
   |                                            ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(generic_const_exprs)]` to allow generic const expressions

error: failed to evaluate the given constant
  --> $DIR/param-in-ct-in-ty-param-default.rs:1:15
   |
LL | struct Foo<T, U = [u8; std::mem::size_of::<T>()]>(T, U);
   |               ^

error: aborting due to 2 previous errors

